styles.css
@font-face {
  font-family: "Libre Franklin";
  font-weight: 300;
  src: local("LibreFranklin-Light"),
    url("fonts/libre-franklin-v14-latin-300.woff2"),
    url("fonts/libre-franklin-v14-latin-300.woff");
}

@font-face {
  font-family: "Libre Franklin";
  font-weight: 600;
  src: local("LibreFranklin-SemiBold"),
    url("fonts/libre-franklin-v14-latin-600.woff2"),
    url("fonts/libre-franklin-v14-latin-600.woff");
}

@font-face {
  font-family: "Libre Franklin";
  font-weight: 700;
  src: local("LibreFranklin-Bold"),
    url("fonts/libre-franklin-v14-latin-700.woff2"),
    url("fonts/libre-franklin-v14-latin-700.woff");
}

/* --------------- CSS Reset --------------- */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
}

*:focus-visible {
  outline: 0.125rem dotted var(--clr-primary-700);
  outline-offset: 0.125rem;
}

img,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

input,
button {
  font: inherit;
}

/* --------------- CSS Variables --------------- */
:root {
  --clr-primary-100: #ffffff;
  --clr-primary-700: #4c7bf3;
  --clr-primary-900: #15202a;

  --clr-secondary-400: #ff5466;

  --clr-neutral-100: rgba(76, 123, 243, 0.15);
  --clr-neutral-200: #c2d3ff; /* email input border */
  --clr-neutral-300: #b8c7ed; /* email placeholder */
  --clr-neutral-400: #969696;
  --clr-neutral-700: rgba(76, 123, 243, 0.7);

  --ff-libre-franklin: "Libre Franklin", sans-serif;

  --fw-300: 300;
  --fw-600: 600;
  --fw-700: 700;

  --fs-100: 0.625rem;
  --fs-200: 0.75rem;
  --fs-250: 0.75rem;
  --fs-500: 1.375rem;
}

/* --------------- Utility Classes --------------- */
.flex-row {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.grid {
  display: grid;
}

.visually-hidden:not(:focus):not(:active) {
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}
/* --------------- End of Utility Classes --------------- */

body {
  min-height: 100vh;
  font-family: var(--ff-libre-franklin);
  font-weight: var(--fw-300);
  text-align: center;
  gap: 1.25rem;
  color: var(--clr-primary-900);
  background-color: var(--clr-primary-100);
  padding: 1.75rem;
}

.header {
  padding: 1.25rem;
  margin-top: 2.25rem;
}

.logo {
  max-width: 3.75rem;
}

.main {
  max-width: 31.25rem;
  gap: 1rem;
  flex-grow: 1;
}

.heading__title {
  font-size: var(--fs-500);
  font-weight: var(--fw-300);
  color: var(--clr-neutral-400);
}

.bold {
  font-weight: var(--fw-700);
  color: var(--clr-primary-900);
}

.heading__text {
  font-size: var(--fs-250);
}

.form-wrapper {
  width: 100%;
  max-width: 17.625rem;
  gap: 0.5rem;
  margin-top: 1rem;
}

.input-email {
  display: block;
  width: 100%;
  font-size: var(--fs-200);
  color: var(--clr-primary-900);
  background-color: var(--clr-primary-100);
  border: 0.0625rem solid var(--clr-neutral-200);
  border-radius: 28px;
  padding: 0.75rem 1.25rem;
}

.input-email::placeholder {
  font-size: var(--fs-200);
  color: var(--clr-neutral-300);
}

.input-email-error {
  border-color: var(--clr-secondary-400);
  outline-color: var(--clr-secondary-400);
}

.btn-notify {
  display: block;
  width: 100%;
  font-size: var(--fs-200);
  font-weight: var(--fw-600);
  color: var(--clr-primary-100);
  background-color: var(--clr-primary-700);
  border: none;
  border-radius: 28px;
  padding: 0.75rem;
}

.btn-notify:hover {
  cursor: pointer;
  background-color: var(--clr-neutral-700);
}

.error {
  font-size: var(--fs-100);
  color: var(--clr-secondary-400);
  margin-bottom: 0.875rem;
}

.hero-img {
  margin-top: 2.875rem;
}

.footer {
  gap: 1.75rem;
  padding: 0.5rem;
  margin-top: 4.25rem;
}

.socials {
  gap: 0.75rem;
}

.social-icon-container {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 0.0625rem solid var(--clr-neutral-100);
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
}

.social-icon-container:hover {
  background-color: var(--clr-primary-700);
}

.social-icon {
  width: 1rem;
  height: 1rem;
  fill: var(--clr-primary-700);
}

.social-icon-container:hover .social-icon {
  fill: var(--clr-primary-100);
}

.copyright {
  font-size: var(--fs-100);
  color: var(--clr-neutral-400);
}

/* --------------- Media Queries --------------- */
@media (min-width: 48rem) {
  :root {
    --fs-100: 0.75rem;
    --fs-200: 1rem;
    --fs-250: 1.25rem;
    --fs-500: 3rem;
  }

  .body {
    gap: 1.875rem;
  }

  .logo {
    max-width: 100%;
  }

  .main {
    max-width: 40.125rem;
  }

  .form-wrapper {
    max-width: 100%;
    display: grid;
    grid-template-columns: 66% 32%;
    gap: 0.75rem;
    margin-top: 1.5rem;
  }

  .input-email {
    flex-shrink: 1;
    padding: 1.125rem 1.25rem;
  }

  .btn-notify {
    flex-shrink: 2;
    padding: 1.125rem;
  }

  .error {
    grid-row: 2;
    text-align: left;
    margin-bottom: 0;
  }

  .hero-img {
    margin-top: 3.625rem;
  }

  .footer {
    gap: 1.5rem;
    padding: 1.25rem;
    margin-top: 1.25rem;
  }
}

